2007-10-03  Al Riddoch  <alriddoch@zepler.org>

	* Eris/View.h, Eris/TypeInfo.h, Eris/PollDefault.h, Eris/Entity.cpp,
	  Eris/Metaserver.h: Switch from the deprecated legacy compatability
	  sigc++ API to the current interface.

	* Eris/Account.cpp, Eris/Account.h: Clean up the whitespace and
	  indenting.

2007-10-02  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Log.h, Eris/Log.cpp: Use the current sigc++ API rather than
	  the deprecated compatability interface.

	* Eris/BaseConnection.cpp: Initialise some member pointers to null,
	  and add assert checks on them.

	* test/SignalFlagger.h: Add a simple class to be used in tests
	  to indicate if a sigc++ signal has emitted.

	* test/Log_unittest.cpp: Add comprehensive coverage of the Log
	  calls.

	* test/BaseConnection_unittest.cpp: Add fairly complete coverage
	  of BaseConnection.

2007-10-02  Al Riddoch  <alriddoch@zepler.org>

	* test/metaQuery.cpp: Output uptime in more friendly terms.

	* test/Makefile.am: Add unit test stubs for all the headers in the
	  library.

2007-09-24  Anders Petersson  <demitar@worldforge.org>

	* bindings/Makefile.am: Switched from install-hook to
	  install-exec-hook to satisfy recent automake.

2007-09-24  Al Riddoch  <alriddoch@zepler.org>

	* test/commander.cpp: Remove an unused variable.

2007-09-24  Al Riddoch  <alriddoch@zepler.org>

	* test/testUtils.cpp: Add the missing newline to the end.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* acinclude.m4: Update to a more recent version of the pkgconfig
	  macros.

	* configure.ac: Use the latest pkgconfig macros, and improve the
	  quality of error messages.

2007-01-28  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.12, Interface version 13.

2007-01-27  Al Riddoch  <alriddoch@zepler.org>

	* Eris/View.cpp: Replace an assert with a warning, to ensure that
	  distributed versions of client run more cleanly while we debug this
	  issue.

2007-01-09  Simon Goodall  <simon@simongoodall.co.uk>
